Added demo gif to readme and beter description

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "browser-sync": "^2.12.8",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-pug": "^3.0.2",
     "gulp-stylus": "^2.3.1"
   }
