--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "browser-sync": "^2.12.8",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-notify": "^2.2.0",
     "gulp-pug": "^3.0.2",
     "gulp-stylus": "^2.3.1"
   }
