--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "html-gulp-build-system",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.1.0",
+  "description": "Simple and effective way to create html and css markup",
   "author": "Simon vom Eyser",
   "devDependencies": {
+    "bootstrap": "^3.3.6",
     "browser-sync": "^2.12.8",
+    "connect-history-api-fallback": "^1.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
     "gulp-notify": "^2.2.0",
     "gulp-pug": "^3.0.2",
-    "gulp-stylus": "^2.3.1"
+    "gulp-stylus": "^2.3.1",
+    "jquery": "^2.2.3"
   }
 }
