--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-notify": "^2.2.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-stylus": "^2.3.1",
     "gulp-pug": "^3.0.2",
     "gulp-stylus": "^2.3.1",
     "jquery": "^2.2.3"
