--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "gulp-pug": "^3.0.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-stylus": "^2.3.1",
+    "gulp-uglify": "^1.5.4",
+    "gulp-uglifycss": "^1.0.6",
     "gulp-util": "^3.0.7",
     "jquery": "^2.2.3"
   }
