--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
+    "gulp-imagemin": "^3.0.1",
     "gulp-notify": "^2.2.0",
     "gulp-pug": "^3.0.2",
     "gulp-sourcemaps": "^1.6.0",
