--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "html-gulp-build-system",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Simple and effective way to create html and css markup",
   "author": "Simon vom Eyser",
   "devDependencies": {
@@ -17,6 +17,7 @@
     "gulp-stylus": "^2.3.1",
     "gulp-uglify": "^1.5.4",
     "gulp-uglifycss": "^1.0.6",
+    "gulp-uncss": "^1.0.6",
     "gulp-util": "^3.0.7",
     "jquery": "^2.2.3"
   },
