--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "browser-sync": "^2.12.8",
     "connect-history-api-fallback": "^1.2.0",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
+    "autoprefixer-stylus": "^0.9.4",
     "gulp-concat": "^2.6.0",
     "gulp-imagemin": "^3.0.1",
     "gulp-notify": "^2.2.0",
